package com.juandelacierva.ChurnGym.domain;

public enum Rol 
{
    ADMIN,
    USUARIO
}
