package com.juandelacierva.ChurnGym.dto;

import lombok.*;

@Getter @Setter
@NoArgsConstructor @AllArgsConstructor
@Builder
public class LoginResponse 
{
    private String token;
    private String username;
    private String rol;
}
