package com.juandelacierva.ChurnGym.repository;

import java.util.Optional;

import org.springframework.data.jpa.repository.JpaRepository;

import com.juandelacierva.ChurnGym.domain.Usuario;

public interface UsuarioRepository extends JpaRepository<Usuario, Long>
{
    Optional<Usuario>   findByUsername(String username);
    Optional<Usuario>   findByEmail(String email);
    boolean             existsByUsername(String username);
    boolean             existsByEmail(String email);
}
