@startuml diagrama_clases_churn_gym

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Arial
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
left to right direction
skinparam nodesep 60
skinparam ranksep 80

skinparam class {
  BackgroundColor #FAFAFA
  BorderColor #AAAAAA
  FontColor #333333
}

' ══════════════════════════════════════════════════
' CAPA ENTITY
' ══════════════════════════════════════════════════
package "Entity" #FFE5B4 
{
class Usuario
{
  - id: Long
  - username: String
  - password: String
  - email: String
  - rol: Rol
}

class Importacion 
{
  - id: Long
  - usuarioId: Long
  - nombreDescriptivo: String
  - fechaImportacion: LocalDateTime
  - totalRegistros: Integer
  - registrosOk: Integer
  - registrosError: Integer
  - estado: EstadoImportacion
}

class Cliente
{
  - id: Long
  - nombre: String
  - apellidos: String
  - email: String
  - fechaNacimiento: LocalDate
  - fechaAlta: LocalDate
}

class Visita
{
  - id: Long
  - fechaVisita: LocalDate
  - duracionMinutos: Integer
  - clienteId: Long
  - importacionId: Long
}

class MetricaCliente 
{
  - id: Long
  - clienteId: Long
  - importacionId: Long
  - frecuenciaSemanal: Double
  - semanasInactivo: Integer
  - tendenciaMensual: Double
  - nivelRiesgo: NivelRiesgo
}

enum Rol {
ADMIN
USUARIO
}

enum NivelRiesgo {
BAJO
MEDIO
ALTO
}

enum EstadoImportacion {
PROCESANDO
COMPLETADA
ERROR
}

  Usuario -[hidden]down-> Importacion
  Usuario -[hidden]right-> Cliente
  Cliente -[hidden]down-> Visita
  Importacion -[hidden]right-> Visita
  Visita -[hidden]right-> MetricaCliente
  Rol -[hidden]down-> EstadoImportacion
  EstadoImportacion -[hidden]down-> NivelRiesgo
}

' ══════════════════════════════════════════════════
' CAPA DTO
' ══════════════════════════════════════════════════
package "DTO" #D4E6F1 {

  class LoginRequest {
    + username: String
    + password: String
  }

  class LoginResponse {
    + token: String
    + username: String
    + rol: String
  }

  class ModeloResumenDTO {
    + id: Long
    + nombreDescriptivo: String
    + fechaImportacion: LocalDateTime
    + totalClientes: Integer
    + alto: Integer
    + medio: Integer
    + bajo: Integer
    + estado: String
  }

  class ModeloDetalleDTO {
    + id: Long
    + nombreDescriptivo: String
    + fechaImportacion: LocalDateTime
    + totalClientes: Integer
    + alto: Integer
    + medio: Integer
    + bajo: Integer
    + metricas: List<MetricaClienteDTO>
  }

  class MetricaClienteDTO {
    + clienteId: Long
    + nombre: String
    + apellidos: String
    + email: String
    + frecuenciaSemanal: Double
    + semanasInactivo: Integer
    + tendenciaMensual: Double
    + nivelRiesgo: String
  }
}

' ══════════════════════════════════════════════════
' CAPA REPOSITORY
' ══════════════════════════════════════════════════
package "Repository" #D5F5E3 {

  interface UsuarioRepository {
    + findByUsername(username: String): Optional<Usuario>
  }

  interface ClienteRepository {
    + findByEmail(email: String): Optional<Cliente>
  }

  interface ImportacionRepository {
    + findByUsuarioIdOrderByFechaImportacionDesc(usuarioId: Long): List<Importacion>
  }

  interface VisitaRepository {
    + findByClienteIdAndImportacionId(clienteId: Long, importacionId: Long): List<Visita>
  }

  interface MetricaClienteRepository {
    + findByImportacionId(importacionId: Long): List<MetricaCliente>
  }
}

' ══════════════════════════════════════════════════
' CAPA SERVICE
' ══════════════════════════════════════════════════
package "Service" #E8DAEF {

  class AuthService {
    + login(request: LoginRequest): LoginResponse
  }

  class ModeloService {
    + getAll(usuarioId: Long): List<ModeloResumenDTO>
    + getById(id: Long): ModeloDetalleDTO
    + importar(nombre: String, csvClientes: MultipartFile, csvVisitas: MultipartFile): ModeloDetalleDTO
    + delete(id: Long): void
  }

  class CsvParserService {
    + parseClientes(file: MultipartFile): List<Cliente>
    + parseVisitas(file: MultipartFile): List<Visita>
  }

  class ChurnEngineService {
    + calcularMetricas(visitas: List<Visita>, cliente: Cliente): MetricaCliente
    + asignarNivelRiesgo(metrica: MetricaCliente): NivelRiesgo
  }
}

' ══════════════════════════════════════════════════
' CAPA CONTROLLER
' ══════════════════════════════════════════════════
package "Controller" #FDEBD0 {

  class AuthController {
    + login(request: LoginRequest): ResponseEntity<LoginResponse>
  }

  class ModeloController {
    + getAll(): ResponseEntity<List<ModeloResumenDTO>>
    + getById(id: Long): ResponseEntity<ModeloDetalleDTO>
    + importar(nombre: String, csvClientes: MultipartFile, csvVisitas: MultipartFile): ResponseEntity<ModeloDetalleDTO>
    + delete(id: Long): ResponseEntity<Void>
  }
}

' ══════════════════════════════════════════════════
' RELACIONES ENTRE ENTIDADES
' ══════════════════════════════════════════════════
Usuario "1" o-- "0..*" Importacion : realiza
Importacion "1" *-- "1..*" Visita : contiene
Importacion "1" *-- "1..*" MetricaCliente : genera
Cliente "1" o-- "0..*" Visita : registra
Cliente "1" o-- "0..*" MetricaCliente : acumula

Usuario -right-> Rol
Importacion -right-> EstadoImportacion
MetricaCliente -right-> NivelRiesgo

' ══════════════════════════════════════════════════
' RELACIONES ENTRE CAPAS
' ══════════════════════════════════════════════════
AuthController ..> AuthService : usa
ModeloController ..> ModeloService : usa

AuthService ..> UsuarioRepository : usa
ModeloService ..> ImportacionRepository : usa
ModeloService ..> ClienteRepository : usa
ModeloService ..> CsvParserService : usa
ModeloService ..> ChurnEngineService : usa
ChurnEngineService ..> MetricaClienteRepository : usa
CsvParserService ..> VisitaRepository : usa

' ══════════════════════════════════════════════════
' MAPEOS DTO
' ══════════════════════════════════════════════════
Importacion ..> ModeloResumenDTO : «maps to»
Importacion ..> ModeloDetalleDTO : «maps to»
MetricaCliente ..> MetricaClienteDTO : «maps to»

@enduml
